// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Live Radio A11y I can see the skip to content link 1`] = `"Simbira ku birimwo"`;

exports[`Canonical Live Radio Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Live Radio Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Live Radio Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "40",
  },
  {
    "p": "gahuza.bbc_gahuza_radio.liveradio.page",
  },
  {
    "x1": "[urn:bbc:ares:ws_media:live:bbc_gahuza_radio]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-gahuza]",
  },
  {
    "x4": "[rw]",
  },
  {
    "x7": "[player-live]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[Radio%20BBC%20Gahuza%20-%20BBC%20News%20Gahuza]",
  },
]
`;

exports[`Canonical Live Radio Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Gahuza",
  "url": "/gahuza",
}
`;

exports[`Canonical Live Radio Footer Anchors should match text and url 2`] = `
{
  "text": "Igituma ushobora kwizera BBC News",
  "url": "https://www.bbc.com/gahuza/institutional-49283343",
}
`;

exports[`Canonical Live Radio Footer Anchors should match text and url 3`] = `
{
  "text": "Ingingo zo gukoresha urubuga",
  "url": "https://www.bbc.com/gahuza/institutional-35754053",
}
`;

exports[`Canonical Live Radio Footer Anchors should match text and url 4`] = `
{
  "text": "Ibijanye na BBC",
  "url": "https://www.bbc.com/gahuza/institutional-35754055",
}
`;

exports[`Canonical Live Radio Footer Anchors should match text and url 5`] = `
{
  "text": "Ibigenga n'ubuzima bwite",
  "url": "https://www.bbc.com/gahuza/institutional-35754059",
}
`;

exports[`Canonical Live Radio Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Live Radio Footer Anchors should match text and url 7`] = `
{
  "text": "Vugana na BBC",
  "url": "https://www.bbc.co.uk/gahuza/send/u50853291",
}
`;

exports[`Canonical Live Radio Footer Anchors should match text and url 8`] = `
{
  "text": "Bona amakuru mu zindi ndimi",
  "url": "https://www.bbc.com/ws/languages?xtor=CS1-13-[wsgahuza~N~A39~MBC]-[Owned]&utm_source=mktg",
}
`;

exports[`Canonical Live Radio Footer Anchors should match text and url 9`] = `
{
  "text": "Soma ibijanye n'aho duhagaze ku mihora ijana ahandi",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Live Radio Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/gahuza"`;

exports[`Canonical Live Radio Footer Paragraphs should match text 1`] = `"© 2026 BBC. BBC ntibazwa ibivuye ku zindi mbuga. Soma ibijanye n'aho duhagaze ku mihora ijana ahandi"`;

exports[`Canonical Live Radio Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, Gahuza",
  "svg": "http://localhost:7081//gahuza/images/brandLogo.svg",
}
`;

exports[`Canonical Live Radio Header Navigation link should match text and url 1`] = `
{
  "text": "Urupapuro rw'itangiriro",
  "url": "/gahuza",
}
`;

exports[`Canonical Live Radio Header Navigation link should match text and url 2`] = `
{
  "text": "Raba",
  "url": "/gahuza/topics/cpqx1yvd5ydt",
}
`;

exports[`Canonical Live Radio Header Navigation link should match text and url 3`] = `
{
  "text": "Uru rupapuro, Umviriza",
  "url": "/gahuza/bbc_gahuza_radio/liveradio",
}
`;

exports[`Canonical Live Radio Main heading should match text 1`] = `"Radio BBC Gahuza"`;

exports[`Canonical Live Radio Media Loader renders a valid container 1`] = `
<figure
  class="media-container css-ucozvf"
  data-e2e="media-loader__container"
>
  <div
    class="media-player css-1kf4wj3"
    data-e2e="media-player"
  >
    <noscript>
      <div>
        <div
          class="css-1mgo2mg"
        >
          <strong
            class="css-pow7hy"
          >
            Ntibishobora gukina mu cuma cawe
          </strong>
        </div>
      </div>
    </noscript>
  </div>
</figure>
`;

exports[`Canonical Live Radio SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7081/gahuza/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Live Radio SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Live Radio SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Live Radio SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Live Radio SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Live Radio SEO Canonical link 1`] = `"http://localhost:7081/gahuza/bbc_gahuza_radio/liveradio"`;

exports[`Canonical Live Radio SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Live Radio SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Live Radio SEO Heading level 1 1`] = `"Radio BBC Gahuza"`;

exports[`Canonical Live Radio SEO Lang attribute 1`] = `"rw"`;

exports[`Canonical Live Radio SEO Linked data should match text 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@type": "RadioChannel",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "rw",
        "name": "Kinyarwanda",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7081/gahuza/bbc_gahuza_radio/liveradio",
        "@type": "WebPage",
        "name": "Radio BBC Gahuza",
      },
      "url": "http://localhost:7081/gahuza/bbc_gahuza_radio/liveradio",
    },
  ],
}
`;

exports[`Canonical Live Radio SEO OG description 1`] = `"Amakuru y’amahanga, ubusesenguzi, amakuru y’akarere k’ibiyaga bigari, ikinamico, ubuzima, imibereho y’abagore. Kuri FM no kuri internet."`;

exports[`Canonical Live Radio SEO OG image 1`] = `"https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/metadata/poster-1024x576.png"`;

exports[`Canonical Live Radio SEO OG image alt 1`] = `"BBC News Gahuza"`;

exports[`Canonical Live Radio SEO OG locale 1`] = `"rw-RW"`;

exports[`Canonical Live Radio SEO OG site name 1`] = `"BBC News Gahuza"`;

exports[`Canonical Live Radio SEO OG title 1`] = `"Radio BBC Gahuza - BBC News Gahuza"`;

exports[`Canonical Live Radio SEO OG type 1`] = `"website"`;

exports[`Canonical Live Radio SEO OG url 1`] = `"http://localhost:7081/gahuza/bbc_gahuza_radio/liveradio"`;

exports[`Canonical Live Radio SEO Page title 1`] = `"Radio BBC Gahuza - BBC News Gahuza"`;

exports[`Canonical Live Radio SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Live Radio SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Live Radio SEO Twitter creator 1`] = `"@bbcgahuza"`;

exports[`Canonical Live Radio SEO Twitter description 1`] = `"Amakuru y’amahanga, ubusesenguzi, amakuru y’akarere k’ibiyaga bigari, ikinamico, ubuzima, imibereho y’abagore. Kuri FM no kuri internet."`;

exports[`Canonical Live Radio SEO Twitter image alt 1`] = `"BBC News Gahuza"`;

exports[`Canonical Live Radio SEO Twitter image src 1`] = `"https://static.files.bbci.co.uk/ws/simorgh-assets/public/gahuza/images/metadata/poster-1024x576.png"`;

exports[`Canonical Live Radio SEO Twitter site 1`] = `"@bbcgahuza"`;

exports[`Canonical Live Radio SEO Twitter title 1`] = `"Radio BBC Gahuza - BBC News Gahuza"`;

exports[`Canonical Live Radio Summary should match text 1`] = `"Amakuru y’amahanga, ubusesenguzi, amakuru y’akarere k’ibiyaga bigari, ikinamico, ubuzima, imibereho y’abagore. Kuri FM no kuri internet."`;
